<?xml version="1.0"?>
<package format="2">
  <name>rcr_sensor_pkgs</name>
  <version>0.0.0</version>
  <description>The rcr_sensor_pkgs package</description>

  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>imu_sensor</exec_depend>
  <exec_depend>sensor_bringup</exec_depend>
  <exec_depend>tyre_trip_publisher</exec_depend>

  <export>
    <metapackage />
  </export>
</package>