<?xml version="1.0"?>
<package format="2">
  <name>sensor_bringup</name>
  <version>0.0.0</version>
  <description>The sensor_bringup package</description>

  <maintainer email="kuwano.tomohiro455@mail.kyutech.jp">calm0815</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>imu_sensor</exec_depend>
  
  <test_depend>roslaunch</test_depend>
  
</package>